--- a/short note/View/NoteCell.xib
+++ b/short note/View/NoteCell.xib
@@ -49,9 +49,16 @@
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpb-eI-z8j">
+                                        <rect key="frame" x="16" y="113" width="0.0" height="0.0"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="10"/>
+                                        <color key="textColor" name="colorCellLight"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.86666667460000002" green="0.86666667460000002" blue="0.86666667460000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
+                                    <constraint firstItem="gpb-eI-z8j" firstAttribute="leading" secondItem="2V5-vi-dX0" secondAttribute="leading" constant="16" id="CsB-Na-yR4"/>
                                     <constraint firstItem="ON0-eC-P2p" firstAttribute="top" secondItem="2V5-vi-dX0" secondAttribute="top" constant="3" id="I8C-eu-Ffv"/>
                                     <constraint firstItem="TtI-zg-ZcY" firstAttribute="leading" secondItem="2V5-vi-dX0" secondAttribute="leading" constant="16" id="Iz1-SH-84x"/>
                                     <constraint firstAttribute="trailing" secondItem="TtI-zg-ZcY" secondAttribute="trailing" constant="16" id="JkR-CB-9zb"/>
@@ -60,6 +67,7 @@
                                     <constraint firstAttribute="bottom" secondItem="TtI-zg-ZcY" secondAttribute="bottom" constant="16" id="TXu-iJ-Vk2"/>
                                     <constraint firstItem="XJc-Dc-Vgn" firstAttribute="top" secondItem="2V5-vi-dX0" secondAttribute="top" constant="4" id="Vut-cu-ccX"/>
                                     <constraint firstAttribute="trailing" secondItem="ON0-eC-P2p" secondAttribute="trailing" constant="16" id="ngE-zE-UF5"/>
+                                    <constraint firstAttribute="bottom" secondItem="gpb-eI-z8j" secondAttribute="bottom" constant="4" id="qQ5-Qf-IFG"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -74,8 +82,8 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="HLL-6B-5zK"/>
             <connections>
-                <outlet property="contentView" destination="cAL-uZ-pDZ" id="AAu-HJ-1FB"/>
                 <outlet property="dateLabel" destination="ON0-eC-P2p" id="qmB-cS-4R1"/>
+                <outlet property="dayLabel" destination="gpb-eI-z8j" id="GIA-Zz-QF2"/>
                 <outlet property="noteLabel" destination="TtI-zg-ZcY" id="MDX-rY-3Qa"/>
                 <outlet property="noteView" destination="2V5-vi-dX0" id="KFS-Mo-P1U"/>
                 <outlet property="sView" destination="Vo0-kW-a32" id="wZq-BS-Aus"/>
@@ -87,6 +95,9 @@
     <resources>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="colorCellLight">
+            <color red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
