--- a/short note/View/Base.lproj/Main.storyboard
+++ b/short note/View/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Short Notes-->
         <scene sceneID="ipj-Yq-m2a">
             <objects>
                 <viewController id="cmZ-Ad-gpb" customClass="ViewController" customModule="short_note" customModuleProvider="target" sceneMemberID="viewController">
@@ -80,7 +80,7 @@
                             <outletCollection property="gestureRecognizers" destination="8aK-7D-5sV" appends="YES" id="G0N-ny-9ZA"/>
                         </connections>
                     </view>
-                    <navigationItem key="navigationItem" id="k5w-m6-X6n">
+                    <navigationItem key="navigationItem" title="Short Notes" id="k5w-m6-X6n" userLabel="Short Notes">
                         <barButtonItem key="backBarButtonItem" title="Back" id="kgz-Lm-OpA"/>
                         <barButtonItem key="leftBarButtonItem" title="Settings" id="imF-gP-znm">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
