--- a/short note/View/Base.lproj/Main.storyboard
+++ b/short note/View/Base.lproj/Main.storyboard
@@ -1395,7 +1395,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Hrc-EX-AWj"/>
+        <segue reference="7Rr-7c-fyv"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="checkGreen" width="170.66667175292969" height="170.66667175292969"/>
