--- a/short note/View/Base.lproj/Main.storyboard
+++ b/short note/View/Base.lproj/Main.storyboard
@@ -567,7 +567,7 @@
                                                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         </state>
                                                                         <connections>
-                                                                            <segue destination="kL0-Ov-RGZ" kind="presentation" identifier="goOther" modalPresentationStyle="overFullScreen" id="M6r-hn-U4J"/>
+                                                                            <segue destination="kL0-Ov-RGZ" kind="presentation" identifier="goOther" id="M6r-hn-U4J"/>
                                                                         </connections>
                                                                     </button>
                                                                 </subviews>
@@ -711,7 +711,7 @@
             <objects>
                 <viewController id="kL0-Ov-RGZ" customClass="NoteSettingsController" customModule="short_note" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4KK-AQ-VlI">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="Crn-Xg-tBs"/>
                         <gestureRecognizers/>
